# Algorithms-demonstrator

./: pyproject.toml
backend/: README.md  handlers.py  main.py
backend/algorythms/: __init__.py  aes.py  gost_28147_89.py
frontend/: README.md
